--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hello, World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minimal Webpage</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+        h1, h2, h3 {
+            color: #222;
+            line-height: 1.2;
+        }
+        p {
+            margin-bottom: 1em;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to My Minimal Webpage</h1>
+        <p>This is a simple example of a webpage with minimal styling. We've kept the design clean and focused on the content.</p>
+        <h2>Section 1</h2>
+        <p>Here's some more text for the first section. You can add your own content here.</p>
+        <h3>Subsection A</h3>
+        <p>And even more details in this subsection.</p>
+        <h2>Section 2</h2>
+        <p>This is the second section of our minimalist webpage. Feel free to add more sections as needed.</p>
+        <p><a href="#">A Simple Link</a></p>
+    </div>
+</body>
+</html>
