--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimal Webpage</title>
+    <title>emmax relays</title>
     <style>
         body {
             font-family: sans-serif;
@@ -38,15 +38,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Minimal Webpage</h1>
-        <p>This is a simple example of a webpage with minimal styling. We've kept the design clean and focused on the content.</p>
-        <h2>Section 1</h2>
-        <p>Here's some more text for the first section. You can add your own content here.</p>
-        <h3>Subsection A</h3>
-        <p>And even more details in this subsection.</p>
-        <h2>Section 2</h2>
-        <p>This is the second section of our minimalist webpage. Feel free to add more sections as needed.</p>
-        <p><a href="#">A Simple Link</a></p>
+        <h1>emmax relays</h1>
+        <p>emmax is a Tor relay hosting family. Relays are hosted securely, globally distributed and fast for use by all Tor users.</p>
+        <h2>What Tor relays do you run?</h2>
+        <p>See the latest relays by searcing for <a href="https://metrics.torproject.org/rs.html#search/family:0084A1C8F870D73BB208F05E153FE47DF8B4C3D6">0084A1C8F870D73BB208F05E153FE47DF8B4C3D6</a> in the Tor Project relay search.</p>
+        <h3>What is Tor?</h3>
+        <p>The Tor Project is a non-profit organization that develops and maintains free and open-source software for online anonymity and privacy. Its core technology, Tor (The Onion Router), directs internet traffic through a decentralized, volunteer-operated network, encrypting each hop to obscure the user's location and usage from network surveillance and traffic analysis. This allows users to browse the internet, communicate, and publish information more privately and securely.</p>
+        <h2>What is a Tor relay?</h2>
+        <p>A Tor relay is a volunteer-run server that forms part of the Tor network. These servers receive encrypted traffic from other Tor users, decrypt one layer to determine the next hop, and then forward it along to another relay or the destination. By passing traffic through multiple relays, the origin and destination of the data become increasingly difficult to trace, providing anonymity for Tor users.</p>
+        <h2>Can I donate to help run your relays?</h2>
+        <p>Yes! Donations really help in relay running costs.</p>
+        <p>Contact us at <a href="mailto:emmaxamme@proton.me">emmaxamme@proton.me</a> to find out how to donate. We will get a donation page available soon.</p>
     </div>
 </body>
 </html>
