--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -39,16 +39,17 @@ a<!DOCTYPE html>
 <body>
     <div class="container">
         <h1>emmax relays</h1>
-        <p>emmax is a Tor relay hosting family. Relays are hosted securely, globally distributed and fast for use by all Tor users.</p>
+        <p>emmax is a Tor relay operator family. We host secure, distributed and fast relays for use by all Tor users.</p>
         <h2>What Tor relays do you run?</h2>
         <p>See the latest relays by searcing for <a href="https://metrics.torproject.org/rs.html#search/family:0084A1C8F870D73BB208F05E153FE47DF8B4C3D6">0084A1C8F870D73BB208F05E153FE47DF8B4C3D6</a> in the Tor Project relay search.</p>
         <h3>What is Tor?</h3>
-        <p>The Tor Project is a non-profit organization that develops and maintains free and open-source software for online anonymity and privacy. Its core technology, Tor (The Onion Router), directs internet traffic through a decentralized, volunteer-operated network, encrypting each hop to obscure the user's location and usage from network surveillance and traffic analysis. This allows users to browse the internet, communicate, and publish information more privately and securely.</p>
+        <p>The Tor Project is a non-profit organization that develops and maintains free and open-source software for online anonymity and privacy. Its core technology, Tor (The Onion Router), directs internet traffic through a decentralized, volunteer-operated network, encrypting each hop to obscure the user's location and usage from network surveillance and traffic analysis.</p>
+        <p>This allows users to browse the internet, communicate, and publish information more privately and securely.</p>
         <h2>What is a Tor relay?</h2>
-        <p>A Tor relay is a volunteer-run server that forms part of the Tor network. These servers receive encrypted traffic from other Tor users, decrypt one layer to determine the next hop, and then forward it along to another relay or the destination. By passing traffic through multiple relays, the origin and destination of the data become increasingly difficult to trace, providing anonymity for Tor users.</p>
+        <p>A Tor relay is a volunteer-run server that forms part of the Tor network. These servers receive encrypted traffic from other Tor users, decrypt one layer to determine the next hop, and then forward it along to another relay or the destination.</p> 
+        <p>By passing traffic through multiple relays, the origin and destination of the data become increasingly difficult to trace, providing anonymity for Tor users.</p>
         <h2>Can I donate to help run your relays?</h2>
-        <p>Yes! Donations really help in relay running costs.</p>
-        <p>Contact us at <a href="mailto:emmaxamme@proton.me">emmaxamme@proton.me</a> to find out how to donate. We will get a donation page available soon.</p>
+        <p>Yes! Donations really help in relay running costs. Please donate at <a href="https://buymeacoffee.com/emmaxamme"https://buymeacoffee.com/emmaxamme</a>.</p>
     </div>
 </body>
 </html>
