--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="avatar.png" alt="Komi from Komi Can't Communicate looking confused">
         <h1>emmax relays</h1>
         <p>emmax is a Tor relay operator family. We host secure, distributed and fast relays for use by all Tor users.</p>
         <h2>What Tor relays do you run?</h2>
