--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <img src="avatar.png" alt="Komi from Komi Can't Communicate looking confused">
         <h1>emmax relays</h1>
-        <p>emmax is a Tor relay operator family. We host secure, distributed and fast relays for use by all Tor users.</p>
+        <p>I am a Tor relay operator. I host a family of secure, distributed and fast relays for use by all Tor users.</p>
         <h2>What Tor relays do you run?</h2>
         <p>See the latest relays by searcing for <a href="https://metrics.torproject.org/rs.html#search/family:0084A1C8F870D73BB208F05E153FE47DF8B4C3D6">0084A1C8F870D73BB208F05E153FE47DF8B4C3D6</a> in the Tor Project relay search.</p>
         <h2>What is Tor?</h2>
@@ -50,7 +50,7 @@
         <p>A Tor relay is a volunteer-run server that forms part of the Tor network. These servers receive encrypted traffic from other Tor users, decrypt one layer to determine the next hop, and then forward it along to another relay or the destination.</p> 
         <p>By passing traffic through multiple relays, the origin and destination of the data become increasingly difficult to trace, providing anonymity for Tor users.</p>
         <h2>Can I donate to help run your relays?</h2>
-        <p>Yes! Donations really help in relay running costs. Use any of the addresses below.</p>
+        <p>Yes! Donations are appreciated and really help in relay running costs. Use any of the addresses below.</p>
         <p>BTC: bc1qmvlktq49l37v9xtaaeu29uhy2wgxjkcj3yggr0</p>
         <p>ETH: 0xce806e8e6671b54526a55B0753789257a18ABcbF</p>
         <p>XMR: 44s8EJXZPxWeMUmvWX9W6QhXSxHTJZoHSVzSXPY6hGDGgUAAxnUNjCyb4Uu1R1XCLfLvDf3ZLWpWpbNhFDapP2qC2uwu685</p>
