--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>emmax relays</title>
+    <title>emmax Tor relays</title>
     <style>
         body {
             font-family: sans-serif;
@@ -39,7 +39,7 @@
 <body>
     <div class="container">
         <img src="avatar.png" alt="Komi from Komi Can't Communicate looking confused">
-        <h1>emmax relays</h1>
+        <h1>emmax Tor relays</h1>
         <p>I am a Tor relay operator. I host a family of secure, distributed and fast relays for use by all Tor users.</p>
         <h2>What Tor relays do you run?</h2>
         <p>See the latest relays by searcing for <a href="https://metrics.torproject.org/rs.html#search/family:0084A1C8F870D73BB208F05E153FE47DF8B4C3D6">0084A1C8F870D73BB208F05E153FE47DF8B4C3D6</a> in the Tor Project relay search.</p>
